Mdx random bugs (#19180)
- icons issues
- scrollbar on toc
- external link icon

--- a/platform/docs-nextjs/src/styles/mongodb-docs.css
+++ b/platform/docs-nextjs/src/styles/mongodb-docs.css
@@ -1133,14 +1133,3 @@ div[id^=modal-] {
   z-index: 2000 !important;
 }
 
-/* Global scrollbar styles for sidenav and scrollable elements */
-::-webkit-scrollbar {
-  background-color: var(--sidenav-bg-color);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #c1c7c6;
-  border-radius: 8px;
-  border: 3px solid transparent;
-  background-clip: padding-box;
-}
